src/other/mico-2.3.12/test/idl/error/case19.idl

/*
 * Bad #pragma directive // not an error any more
 */

#pragma foobar "omg.org"

typedef string Identifier;

